@@ -14,6 +14,7 @@ NEWS
   * fixed typo in example config found by openSUSE user (boo# 907709)
   * [network] fix compile break in calculation of sockaddr_un size if SUN_LEN is not defined (fixes #2609)
   * [connections] fix bug in connection state handling
+  * print backtrace in assert logging with libunwind
 
 - 1.4.35 - 2014-03-12
   * [network/ssl] fix build error if TLSEXT is disabled
